--- a/contents/gallery/gallery.html
+++ b/contents/gallery/gallery.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Masashi Yamada Lab</title>
+		<title>MYLAB - Gallery</title>
 		<link rel="icon" href="../../images/myicon.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../../assets/css/gallery.css" />
-		<link rel="stylesheet" href="../../assets/css/main.css" />
+		<!-- <link rel="stylesheet" href="../../assets/css/main.css" /> -->
 		<noscript><link rel="stylesheet" href="../../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -16,7 +16,7 @@
 
 			<!-- Header -->
 			<header id="header" class="alt style4">
-				<a href="../../index.html" class="logo"><strong>MY</strong> <span>LAB</span></a>
+				<a href="../../index.html" class="logo"><strong>MY</strong><span>LAB</span></a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
@@ -50,7 +50,7 @@
 			<div id="main">
 
 				<!-- Year -->
-				<section id="one" class="gallery_tiles">
+				<section id="one" class="tiles">
 
 					<!-- 2024 -->
 					<article>
@@ -65,7 +65,7 @@
 
 					<!-- 2023 -->
 					<article>
-						<span class="image" style="margin-right: 1%; margin-bottom: 1%;">
+						<span class="image">
 							<img src="./2023/bg_img.jpg" alt=""/>
 						</span>
 						<header class="major">
@@ -79,10 +79,6 @@
 				<!-- Two -->
 				<section id="two">
 					<div class="inner">
-						<!-- <header class="major">
-							<h2>Some introduction</h2>
-						</header> -->
-						<!-- <p>Some introduction</p> -->
 						<ul class="actions">
 							<li><a href="../recruitment/recruitment.html" class="button next">Join us</a></li>
 						</ul>
