--- a/contents/members/members.html
+++ b/contents/members/members.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Masashi Yamada Lab</title>
+		<title>MYLAB - Members</title>
 		<link rel="icon" href="../../images/myicon.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -11,136 +11,124 @@
 	<body class="is-preload">
 
 		<!-- Wrapper -->
-		<div id="wrapper">
+			<div id="wrapper">
 
-			<!-- Header -->
-			<header id="header" class="alt style3">
-				<a href="../../index.html" class="logo"><strong>MY</strong> <span>LAB</span></a>
-				<nav>
-					<a href="#menu">Menu</a>
-				</nav>
-			</header>
-
-			<!-- Menu -->
-			<nav id="menu">
-				<ul class="links">
-					<li><a href="../../index.html">Home</a></li>
-					<li><a href="../research/research.html">Research</a></li>
-					<li><a href="../publications/publications.html">Publications</a></li>
-					<li><a href="#">Members</a></li>
-					<li><a href="../gallery/gallery.html">Gallery</a></li>
-					<li><a href="../recruitment/recruitment.html">Join us</a></li>
-				</ul>
-			</nav>
-
-			<!-- Banner -->
-			<section id="banner" class="major style3">
-				<div class="inner">
-					<header class="major">
-						<h1>Members</h1>
+				<!-- Header -->
+					<header id="header" class="alt style3">
+						<a href="../../index.html" class="logo"><strong>MY</strong> <span>LAB</span></a>
+						<nav>
+							<a href="#menu">Menu</a>
+						</nav>
 					</header>
-					<div class="content">
-						<p>Members</p>
-					</div>
-				</div>
-			</section>
 
-			<!-- Main -->
-			<div id="main">
-
-				<!-- Instructor -->
-				<section id="instructor" class="instructor">
-					<article style="width: 100%;">
-						<span class="image">
-							<img src="images/pic01.jpg" alt="" />
-						</span>
-						<header class="major">
-							<h3><a href="#" class="link">Masashi Yamada</a></h3>
-							<p>Principal Investigator</p>
-						</header>
-					</article>
-				</section>
-
-				<!-- Crew -->
-				<section id="one" class="members">
-					<!-- Member 1 -->
-					<article>
-						<span class="image">
-							<img src="images/pic01.jpg" alt="" />
-						</span>
-						<header class="major">
-							<h3><a href="#" class="link">Yu-Chun</a></h3>
-							<p>Post-Doc</p>
-						</header>
-					</article>
-					<!-- Member 2 -->
-					<article>
-						<span class="image">
-							<img src="images/pic02.jpg" alt="" />
-						</span>
-						<header class="major">
-							<h3><a href="#" class="link">Joon-Keat</a></h3>
-							<p>Post-Doc</p>
-						</header>
-					</article>
-					<!-- Member 3 -->
-					<article>
-						<span class="image">
-							<img src="images/pic03.jpg" alt="" />
-						</span>
-						<header class="major">
-							<h3><a href="#" class="link">Hsiao-Yu</a></h3>
-							<p>Research Assistant</p>
-						</header>
-					</article>
-					<!-- Member 4 -->
-					<article>
-						<span class="image">
-							<img src="images/pic04.jpg" alt="" />
-						</span>
-						<header class="major">
-							<h3><a href="#" class="link">Jhenny</a></h3>
-							<p>Research Assistant</p>
-						</header>
-					</article>
-					<!-- Member 5 -->
-					<article>
-						<span class="image">
-							<img src="images/pic05.jpg" alt="" />
-						</span>
-						<header class="major">
-							<h3><a href="#" class="link">Geena</a></h3>
-							<p>Graduate Student</p>
-						</header>
-					</article>
-					<!-- Member 6 -->
-					<article>
-						<span class="image">
-							<img src="images/pic06.jpg" alt="" />
-						</span>
-						<header class="major">
-							<h3><a href="#" class="link">Coming Soon</a></h3>
-							<p>Graduate Student</p>
-						</header>
-					</article>
-				</section>
-
-				<!-- Two -->
-				<section id="two">
-					<div class="inner">
-						<!-- <header class="major">
-							<h2>Some introduction</h2>
-						</header> -->
-						<!-- <p>Some introduction</p> -->
-						<ul class="actions">
-							<li><a href="../recruitment/recruitment.html" class="button next">Join us</a></li>
+				<!-- Menu -->
+					<nav id="menu">
+						<ul class="links">
+							<li><a href="../../index.html">Home</a></li>
+							<li><a href="../research/research.html">Research</a></li>
+							<li><a href="../publications/publications.html">Publications</a></li>
+							<li><a href="#">Members</a></li>
+							<li><a href="../gallery/gallery.html">Gallery</a></li>
+							<li><a href="../recruitment/recruitment.html">Join us</a></li>
 						</ul>
+					</nav>
+
+				<!-- Banner -->
+					<section id="banner" class="style3" style="background-image: url('../gallery/2024/bg_img.jpg');">
+						<div class="inner">
+							<header class="major">
+								<h1>Members</h1>
+							</header>
+							<div class="content">
+								<p>Awesome crew</p>
+							</div>
+						</div>
+					</section>
+
+				<!-- Main -->
+					<div id="main">
+
+						<!-- One -->
+							<section id="one" class="tiles">
+								<!-- Member 1 -->
+								<article>
+									<span class="image">
+										<img src="./selfie_masashi.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="https://abrc.sinica.edu.tw/faculty/?id=masyamad" class="link">Masashi Yamada</a></h3>
+										<p>Principal Investigator</p>
+									</header>
+								</article>
+								<!-- Member 2 -->
+								<article>
+									<span class="image">
+										<img src="./images/publication.png" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="#" class="link">Yu-Chun</a></h3>
+										<p>Post-doc</p>
+									</header>
+								</article>
+								<!-- Member 3 -->
+								<article>
+									<span class="image">
+										<img src="../members.png" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="#" class="link">Joon-Keat</a></h3>
+										<p>Post-doc</p>
+									</header>
+								</article>
+								<!-- Member 4 -->
+								<article>
+									<span class="image">
+										<img src="images/pic03.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="#" class="link">Hsiao-Yu</a></h3>
+										<p>Research Assistant</p>
+									</header>
+								</article>
+								<!-- Member 5 -->
+								<article>
+									<span class="image">
+										<img src="images/pic04.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="#" class="link">Jhenny</a></h3>
+										<p>Research Assistant</p>
+									</header>
+								</article>
+								<!-- Member 6 -->
+								<article>
+									<span class="image">
+										<img src="images/pic05.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="#" class="link">Geena</a></h3>
+										<p>Graduate Student</p>
+									</header>
+								</article>
+								
+							</section>
+
+						<!-- Join us -->
+							<section id="two">
+								<div class="inner">
+									<!-- <header class="major">
+										<h2>Some introduction</h2>
+									</header> -->
+									<!-- <p>Some introduction</p> -->
+									<ul class="actions">
+										<li><a href="../recruitment/recruitment.html" class="button next">Join us</a></li>
+									</ul>
+								</div>
+							</section>
+
 					</div>
-				</section>
 
-			</div>	
-
-		</div>
+			</div>
 
 		<!-- Scripts -->
 			<script src="../../assets/js/jquery.min.js"></script>
