--- a/contents/recruitment/recruitment.html
+++ b/contents/recruitment/recruitment.html
@@ -47,7 +47,7 @@
 			<div id="main">
 
 				<!-- Year -->
-				<section id="one" class="gallery_tiles">
+				<section id="one" class="tiles">
 
 					<!-- Post-doc -->
 					<article>
@@ -124,8 +124,9 @@
 
 				<!-- Footer -->
 				<footer id="footer">
-					<span class="image main" style="margin: 0;"><img src="./ABRC_logo.gif" alt="" style="opacity: 20%;" /></span>
-					<!-- <span class="image main" style="margin: 0;"><img src="./ABRC_bg_img.png" alt="" style="opacity: 30%;" /></span> -->
+					<a href="https://www.as-bcst.sinica.edu.tw/">
+						<span class="image main" style="margin: 0;"><img src="./ABRC_logo.gif" alt="" style="opacity: 20%;" /></span>
+					</a>
 				</footer>
 
 			</div>
