--- a/contents/recruitment/research_assistant.html
+++ b/contents/recruitment/research_assistant.html
@@ -161,8 +161,9 @@
 
 				<!-- Footer -->
 				<footer id="footer">
-					<span class="image main" style="margin: 0;"><img src="./ABRC_logo.gif" alt="" style="opacity: 20%;" /></span>
-					<!-- <span class="image main" style="margin: 0;"><img src="./ABRC_bg_img.png" alt="" style="opacity: 30%;" /></span> -->
+					<a href="https://www.as-bcst.sinica.edu.tw/">
+						<span class="image main" style="margin: 0;"><img src="./ABRC_logo.gif" alt="" style="opacity: 20%;" /></span>
+					</a>
 				</footer>
 
 			</div>
