--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>MYLAB</title>
+		<title>Masashi Yamada LAB</title>
 		<link rel="icon" href="./images/myicon.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -34,13 +34,13 @@
 					</nav>
 
 				<!-- Banner -->
-					<section id="banner" class="major" style="background-image: url('./contents/gallery/2024/bg_img.jpg');">
+					<section id="banner" class="major" style="background-image: url('./contents/publications/y2016_dev-cell.jpg');">
 						<div class="inner">
 							<header class="major">
-								<h1>Hi</h1>
+								<h1>Hi 👋 this is Masashi's Lab</h1>
 							</header>
 							<div class="content">
-								<p>Arabidopsis root development</p>
+								<p>ROS Signalling & Root Development</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">About us</a></li>
 								</ul>
@@ -56,7 +56,8 @@
 
 								<article>
 									<span class="image">
-										<img src="./images/research.png" alt="" />
+										<!-- <img src="./images/research.png" alt="" /> -->
+										<img src="./contents/publications/y2021_genes.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="./contents/research/research.html" class="link">Research</a></h3>
@@ -66,7 +67,7 @@
 
 								<article>
 									<span class="image">
-										<img src="./images/publication.png" alt="" />
+										<img src="./contents/publications/y2020_nature.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="./contents/publications/publications.html" class="link">Publications</a></h3>
@@ -76,7 +77,7 @@
 
 								<article>
 									<span class="image">
-										<img src="./images/members.png" alt="" />
+										<img src="./contents/gallery/2024/bg_img.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="./contents/members/members.html" class="link">Members</a></h3>
@@ -86,7 +87,7 @@
 
 								<article>
 									<span class="image">
-										<img src="./images/gallery.png" alt="" />
+										<img src="./contents/gallery/2023/bg_img.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="./contents/gallery/gallery.html" class="link">Gallery</a></h3>
