--- a/contents/members/members.html
+++ b/contents/members/members.html
@@ -66,7 +66,7 @@
 										<img src="./images/publication.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="#" class="link">Yu-Chun</a></h3>
+										<h3><a href="#.html" class="link">Yu-Chun</a></h3>
 										<p>Post-doc</p>
 									</header>
 								</article>
@@ -76,7 +76,7 @@
 										<img src="../members.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="#" class="link">Joon-Keat</a></h3>
+										<h3><a href="#.html" class="link">Joon-Keat</a></h3>
 										<p>Post-doc</p>
 									</header>
 								</article>
@@ -86,7 +86,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="#" class="link">Hsiao-Yu</a></h3>
+										<h3><a href="#.html" class="link">Hsiao-Yu</a></h3>
 										<p>Research Assistant</p>
 									</header>
 								</article>
@@ -96,7 +96,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="#" class="link">Jhenny</a></h3>
+										<h3><a href="#.html" class="link">Jhenny</a></h3>
 										<p>Research Assistant</p>
 									</header>
 								</article>
@@ -106,7 +106,27 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="#" class="link">Geena</a></h3>
+										<h3><a href="#.html" class="link">Yuan-Fong</a></h3>
+										<p>Research Assistant</p>
+									</header>
+								</article>
+								<!-- Member 7 -->
+								<article>
+									<span class="image">
+										<img src="images/pic05.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="#.html" class="link">Geena</a></h3>
+										<p>Graduate Student</p>
+									</header>
+								</article>
+								<!-- Member 8 -->
+								<article>
+									<span class="image">
+										<img src="images/pic05.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="#.html" class="link">Coming soon</a></h3>
 										<p>Graduate Student</p>
 									</header>
 								</article>
