--- a/contents/research/research.html
+++ b/contents/research/research.html
@@ -39,7 +39,7 @@
 					<section id="banner" class="style1">
 						<div class="inner">
 							<span class="image">
-								<img src="images/pic07.jpg" alt="" />
+								<img src="./RGF1_RITF1.png" alt="" />
 							</span>
 							<header class="major">
 								<h1>Research Focus</h1>
@@ -55,7 +55,7 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- One -->
+						<!-- Grid 1 -->
 							<!-- <section id="one">
 								<div class="inner">
 									<header>
@@ -65,69 +65,46 @@
 								</div>
 							</section> -->
 
-						<!-- Two -->
+						<!-- Research aspects -->
 							<section id="two" class="spotlights">
 
 								<!-- Understanding the regulation mechanism of root meristem development by RGF1 peptide -->
 								<section>
-									<a href="./Understanding the regulation mechanism of root meristem development by RGF1 peptide.html" class="image">
-										<img src="./RGF1_RITF1.png" alt="" data-position="center center" />
+									<a href="./ros_distribution.html" class="image">
+										<img src="./ROS_modulation.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header>
-												<h3>Understanding the regulation mechanism of root meristem development by RGF1 peptide</h3>
+												<h3>Understanding of the regulation mechanism of ROS distributions at the specific root developmental zone under the RGF1 peptide signal</h3>
 											</header>
 											<p>
-												Stem cell niche is maintained by the signaling networks of the peptide hormone, Root Meristem Growth Factor 1 (RGF1). 
-												Recently, I discovered a series of signaling events following RGF1 action. 
-												There are three major discoveries...
+												Stem cell niche and root meristem size are maintained by intercellular interactions and signaling networks of a peptide hormone, Root Meristem Growth Factor 1 (RGF1). 
+												How RGF1 regulates root meristem development is an essential question for understanding stem cell function.
 											</p>
 											<ul class="actions">
-												<li><a href="./Understanding the regulation mechanism of root meristem development by RGF1 peptide.html" class="button">Learn more</a></li>
+												<li><a href="./ros_distribution.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 
-								<!-- Identify transcripts for adaptation to abiotic stress in developmental zones -->
+								<!-- Understanding the spatial regulation mechanism of ROS distributions in the root developmental zone under abiotic stress -->
 								<section>
-									<a href="./Identify transcripts for adaptation to abiotic stress in developmental zones.html" class="image">
-										<img src="./Identify transcripts.png" alt="" data-position="center center" />
+									<a href="./abiotic.html" class="image">
+										<img src="./abiotic.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header>
-												<h3>Identify transcripts for adaptation to abiotic stress in developmental zones</h3>
+												<h3>Understanding the spatial regulation mechanism of ROS distributions in the root developmental zone under abiotic stress</h3>
 											</header>
 											<p>
-												The balance of the ROS signals, superoxide in the meristematic zone and hydrogen peroxide in the differentiation zone, 
-												determines the transition from cell division to cell elongation. 
-												However, this balance is altered during periods of stress...
+												High-temperature adaptation in the root developmental zone is regulated by ROS signaling. 
+												The ROS signal is altered during adaptation to high-temperature stress.
 											</p>
 											<ul class="actions">
-												<li><a href="./Identify transcripts for adaptation to abiotic stress in developmental zones.html" class="button">Learn more</a></li>
-											</ul>
-										</div>
-									</div>
-								</section>
-
-								<!-- Understanding the mechanism modulating ROS distributions under abiotic stress by live-imaging analysis -->
-								<section>
-									<a href="./Understanding the mechanism modulating ROS distributions under abiotic stress by live-imaging analysis.html" class="image">
-										<img src="./live_imaging.png" alt="" data-position="center center" />
-									</a>
-									<div class="content">
-										<div class="inner">
-											<header>
-												<h3>Understanding the mechanism modulating ROS distributions under abiotic stress by live-imaging analysis</h3>
-											</header>
-											<p>
-												Exposure to various abiotic stresses results in accumulation of reactive oxygen species (ROS) in plants, 
-												which has a signaling role in the regulation of plant development for adaptation...
-											</p>
-											<ul class="actions">
-												<li><a href="./Understanding the mechanism modulating ROS distributions under abiotic stress by live-imaging analysis.html" class="button">Learn more</a></li>
+												<li><a href="./abiotic.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
@@ -136,7 +113,7 @@
 
 							</section>
 
-						<!-- Three -->
+						<!-- Grid 3 -->
 							<section id="three">
 								<div class="inner">
 									<!-- <header class="major">
