--- a/contents/recruitment/recruitment.html
+++ b/contents/recruitment/recruitment.html
@@ -70,6 +70,17 @@
 							<p>Life Science, Biotechnology, Agriculture</p>
 						</header>
 					</article>
+
+					<!-- Student -->
+					<article>
+						<span class="image">
+							<img src="./ncku.jpg" alt=""/>
+						</span>
+						<header class="major">
+							<h3><a href="https://itps.ncku.edu.tw/" class="link">Student (PhD / Master)</a></h3>
+							<p>Institute of Tropical Plant Sciences and Microbiology, NCKU</p>
+						</header>
+					</article>
 					
 				</section>
 
