--- a/contents/members/members.html
+++ b/contents/members/members.html
@@ -50,7 +50,7 @@
 
 						<!-- One -->
 							<section id="one" class="tiles">
-								<!-- Member 1 -->
+								<!-- Principal Investigator -->
 								<article>
 									<span class="image">
 										<img src="./selfie_masashi.jpg" alt="" />
@@ -60,27 +60,7 @@
 										<p>Principal Investigator</p>
 									</header>
 								</article>
-								<!-- Member 2 -->
-								<article>
-									<span class="image">
-										<img src="./images/publication.png" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="#.html" class="link">Yu-Chun</a></h3>
-										<p>Post-doc</p>
-									</header>
-								</article>
-								<!-- Member 3 -->
-								<article>
-									<span class="image">
-										<img src="../members.png" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="#.html" class="link">Joon-Keat</a></h3>
-										<p>Post-doc</p>
-									</header>
-								</article>
-								<!-- Member 4 -->
+								<!-- Research Assistant -->
 								<article>
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
@@ -90,7 +70,6 @@
 										<p>Research Assistant</p>
 									</header>
 								</article>
-								<!-- Member 5 -->
 								<article>
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
@@ -100,7 +79,6 @@
 										<p>Research Assistant</p>
 									</header>
 								</article>
-								<!-- Member 6 -->
 								<article>
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
@@ -110,24 +88,42 @@
 										<p>Research Assistant</p>
 									</header>
 								</article>
-								<!-- Member 7 -->
+								<!-- Postdoc -->
+								<article>
+									<span class="image">
+										<img src="./images/publication.png" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="#.html" class="link">Yu-Chun</a></h3>
+										<p>Post-doc</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="../members.png" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="#.html" class="link">Joon-Keat</a></h3>
+										<p>Post-doc</p>
+									</header>
+								</article>
+								<!-- Student -->
 								<article>
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="#.html" class="link">Geena</a></h3>
-										<p>Graduate Student</p>
+										<p>Master Student</p>
 									</header>
 								</article>
-								<!-- Member 8 -->
 								<article>
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="#.html" class="link">Coming soon</a></h3>
-										<p>Graduate Student</p>
+										<p>Master Student</p>
 									</header>
 								</article>
 								
