--- a/contents/recruitment/postdoc.html
+++ b/contents/recruitment/postdoc.html
@@ -79,7 +79,9 @@
 
 							<h3>Salary</h3>
 							<p>
-								Doctoral degree: Starting from NTD 62,776, adjusted according to seniority.
+								Doctoral degree: Starting from NTD 62,776<sup>*</sup>;
+								<br>
+								<sup>*</sup>Adjusted according to seniority.
 							</p>
 
 							<h3>Application</h3>
