--- a/contents/recruitment/research_assistant.html
+++ b/contents/recruitment/research_assistant.html
@@ -85,9 +85,9 @@
 
 							<h3>Salary</h3>
 							<p>
-								Bachelor: Starting from NTD 37,240; <br>
-								Master: Starting from NTD 43,624; <br>
-								Adjusted according to seniority.
+								Bachelor: Starting from NTD 37,240<sup>*</sup>;<br>
+								Master: Starting from NTD 43,624<sup>*</sup>;<br>
+								<sup>*</sup>Adjusted according to seniority.
 							</p>
 
 							<h3>Application</h3>
