--- a/contents/gallery/gallery.html
+++ b/contents/gallery/gallery.html
@@ -58,7 +58,7 @@
 							<img src="./2024/bg_img.jpg" alt="" />
 						</span>
 						<header class="major">
-							<h3><a href="#" class="link">2024</a></h3>
+							<h3><a href="./2024/gallery_2024.html" class="link">2024</a></h3>
 							<p></p>
 						</header>
 					</article>
@@ -69,7 +69,7 @@
 							<img src="./2023/bg_img.jpg" alt=""/>
 						</span>
 						<header class="major">
-							<h3><a href="#" class="link">2023</a></h3>
+							<h3><a href="./2023/gallery_2023.html" class="link">2023</a></h3>
 							<p></p>
 						</header>
 					</article>
