--- a/contents/members/members.html
+++ b/contents/members/members.html
@@ -79,15 +79,6 @@
 										<p>Research Assistant</p>
 									</header>
 								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="#.html" class="link">Yuan-Fong</a></h3>
-										<p>Research Assistant</p>
-									</header>
-								</article>
 								<!-- Postdoc -->
 								<article>
 									<span class="image">
@@ -122,7 +113,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="#.html" class="link">Coming soon</a></h3>
+										<h3><a href="#.html" class="link">杜漩悅</a></h3>
 										<p>Master Student</p>
 									</header>
 								</article>
