--- a/contents/publications/publications.html
+++ b/contents/publications/publications.html
@@ -39,7 +39,7 @@
 					<section id="banner" class="style2">
 						<div class="inner">
 							<span class="image">
-								<img src="images/pic07.jpg" alt="" />
+								<img src="./y2020_nature.jpg" alt="" />
 							</span>
 							<header class="major">
 								<h1>Publications</h1>
