--- a/contents/research/research.html
+++ b/contents/research/research.html
@@ -39,7 +39,7 @@
 					<section id="banner" class="style1">
 						<div class="inner">
 							<span class="image">
-								<img src="./RGF1_RITF1.png" alt="" />
+								<img src="./live_imaging.png" alt="" />
 							</span>
 							<header class="major">
 								<h1>Research Focus</h1>
