--- a/contents/members/members.html
+++ b/contents/members/members.html
@@ -113,7 +113,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="#.html" class="link">杜漩悅</a></h3>
+										<h3><a href="#.html" class="link">Sean-Yuet</a></h3>
 										<p>Master Student</p>
 									</header>
 								</article>
