--- a/contents/gallery/gallery.html
+++ b/contents/gallery/gallery.html
@@ -30,6 +30,7 @@
 					<li><a href="../publications/publications.html">Publications</a></li>
 					<li><a href="../members/members.html">Members</a></li>
 					<li><a href="#">Gallery</a></li>
+					<li><a href="../software/software.html">Software</a></li>
 					<li><a href="../recruitment/recruitment.html">Join us</a></li>
 				</ul>
 			</nav>
