--- a/index.html
+++ b/index.html
@@ -1,166 +1,171 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Masashi Yamada LAB</title>
-		<link rel="icon" href="./images/myicon.ico">
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<head>
+	<title>Masashi Yamada LAB</title>
+	<link rel="icon" href="./images/myicon.ico">
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+</head>
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>MY</strong> <span>LAB</span></a>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
+<body class="is-preload">
+
+	<!-- Wrapper -->
+	<div id="wrapper">
+
+		<!-- Header -->
+		<header id="header" class="alt">
+			<a href="index.html" class="logo"><strong>MY</strong> <span>LAB</span></a>
+			<nav>
+				<a href="#menu">Menu</a>
+			</nav>
+		</header>
+
+		<!-- Menu -->
+		<nav id="menu">
+			<ul class="links">
+				<li><a href="./index.html">Home</a></li>
+				<li><a href="./contents/research/research.html">Research</a></li>
+				<li><a href="./contents/publications/publications.html">Publications</a></li>
+				<li><a href="./contents/members/members.html">Members</a></li>
+				<li><a href="./contents/gallery/gallery.html">Gallery</a></li>
+				<li><a href="./contents/software/software.html">Software</a></li>
+				<li><a href="./contents/recruitment/recruitment.html">Join us</a></li>
+			</ul>
+		</nav>
+
+		<!-- Banner -->
+		<section id="banner" class="major" style="background-image: url('./contents/publications/y2016_dev-cell.jpg');">
+			<div class="inner">
+				<header class="major">
+					<h1>Hi 👋 this is Masashi's Lab</h1>
+				</header>
+				<div class="content">
+					<p>ROS Signalling & Root Development</p>
+					<ul class="actions">
+						<li><a href="#one" class="button next scrolly">About us</a></li>
+					</ul>
+				</div>
+			</div>
+		</section>
+
+		<!-- Main -->
+		<div id="main">
+
+			<!-- One -->
+			<section id="one" class="tiles">
+
+				<article>
+					<span class="image">
+						<!-- <img src="./images/research.png" alt="" /> -->
+						<img src="./contents/publications/y2021_genes.jpg" alt="" />
+					</span>
+					<header class="major">
+						<h3><a href="./contents/research/research.html" class="link">Research</a></h3>
+						<p>Root development</p>
 					</header>
+				</article>
 
-				<!-- Menu -->
-					<nav id="menu">
-						<ul class="links">
-							<li><a href="./index.html">Home</a></li>
-							<li><a href="./contents/research/research.html">Research</a></li>
-							<li><a href="./contents/publications/publications.html">Publications</a></li>
-							<li><a href="./contents/members/members.html">Members</a></li>
-							<li><a href="./contents/gallery/gallery.html">Gallery</a></li>
-							<li><a href="./contents/recruitment/recruitment.html">Join us</a></li>
-						</ul>
-					</nav>
+				<article>
+					<span class="image">
+						<img src="./contents/publications/y2020_nature.jpg" alt="" />
+					</span>
+					<header class="major">
+						<h3><a href="./contents/publications/publications.html" class="link">Publications</a></h3>
+						<p>Ongoing</p>
+					</header>
+				</article>
 
-				<!-- Banner -->
-					<section id="banner" class="major" style="background-image: url('./contents/publications/y2016_dev-cell.jpg');">
-						<div class="inner">
-							<header class="major">
-								<h1>Hi 👋 this is Masashi's Lab</h1>
-							</header>
-							<div class="content">
-								<p>ROS Signalling & Root Development</p>
-								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">About us</a></li>
-								</ul>
-							</div>
-						</div>
-					</section>
+				<article>
+					<span class="image">
+						<img src="./contents/gallery/2024/bg_img.jpg" alt="" />
+					</span>
+					<header class="major">
+						<h3><a href="./contents/members/members.html" class="link">Members</a></h3>
+						<p>Awesome crew</p>
+					</header>
+				</article>
 
-				<!-- Main -->
-					<div id="main">
+				<article>
+					<span class="image">
+						<img src="./contents/gallery/2023/bg_img.jpg" alt="" />
+					</span>
+					<header class="major">
+						<h3><a href="./contents/gallery/gallery.html" class="link">Gallery</a></h3>
+						<p>Happy-hour</p>
+					</header>
+				</article>
+			</section>
 
-						<!-- One -->
-							<section id="one" class="tiles">
-
-								<article>
-									<span class="image">
-										<!-- <img src="./images/research.png" alt="" /> -->
-										<img src="./contents/publications/y2021_genes.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="./contents/research/research.html" class="link">Research</a></h3>
-										<p>Root development</p>
-									</header>
-								</article>
-
-								<article>
-									<span class="image">
-										<img src="./contents/publications/y2020_nature.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="./contents/publications/publications.html" class="link">Publications</a></h3>
-										<p>Ongoing</p>
-									</header>
-								</article>
-
-								<article>
-									<span class="image">
-										<img src="./contents/gallery/2024/bg_img.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="./contents/members/members.html" class="link">Members</a></h3>
-										<p>Awesome crew</p>
-									</header>
-								</article>
-
-								<article>
-									<span class="image">
-										<img src="./contents/gallery/2023/bg_img.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="./contents/gallery/gallery.html" class="link">Gallery</a></h3>
-										<p>Happy-hour</p>
-									</header>
-								</article>
-							</section>
-
-						<!-- Two -->
-							<section id="two">
-								<div class="inner">
-									<!-- <header class="major">
+			<!-- Two -->
+			<section id="two">
+				<div class="inner">
+					<!-- <header class="major">
 										<h2>Some introduction</h2>
 									</header> -->
-									<!-- <p>Some introduction</p> -->
-									<ul class="actions">
-										<li><a href="./contents/recruitment/recruitment.html" class="button next">Join us</a></li>
-									</ul>
-								</div>
-							</section>
+					<!-- <p>Some introduction</p> -->
+					<ul class="actions">
+						<li><a href="./contents/recruitment/recruitment.html" class="button next">Join us</a></li>
+					</ul>
+				</div>
+			</section>
 
-					</div>
+		</div>
 
-				<!-- Contact -->
-					<section id="contact">
-						<div class="inner">
+		<!-- Contact -->
+		<section id="contact">
+			<div class="inner">
 
-							<section class="split">
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-envelope"></span>
-										<h3>Email</h3>
-										<a href="#">masyamad4@gmail.com</a><br />
-										<a href="#">masyamad@sinica.edu.tw</a>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-phone"></span>
-										<h3>Phone</h3>
-										<span>+886 6-3032280 (ext. 216)</span>
-									</div>
-								</section>
-							</section>
-
-							<section class="split">
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-home"></span>
-										<h3>Address 1</h3>
-										<span>
-											128, Academia Road, Section 2, Nankang,<br />
-											Taipei 11529, Taiwan
-										</span>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-home"></span>
-										<h3>Address 2</h3>
-										<span>
-											100, Sec. 1, Guiren 13th Rd., Guiren Dist.,<br />
-											Tainan City 711, Taiwan
-										</span>
-									</div>
-								</section>
-							</section>
-
+				<section class="split">
+					<section>
+						<div class="contact-method">
+							<span class="icon solid alt fa-envelope"></span>
+							<h3>Email</h3>
+							<a href="#">masyamad4@gmail.com</a><br />
+							<a href="#">masyamad@sinica.edu.tw</a>
 						</div>
 					</section>
+					<section>
+						<div class="contact-method">
+							<span class="icon solid alt fa-phone"></span>
+							<h3>Phone</h3>
+							<span>+886 6-3032280 (ext. 216)</span>
+						</div>
+					</section>
+				</section>
 
-				<!-- Footer -->
-					<!-- <footer id="footer">
+				<section class="split">
+					<section>
+						<div class="contact-method">
+							<span class="icon solid alt fa-home"></span>
+							<h3>Address 1</h3>
+							<span>
+								128, Academia Road, Section 2, Nankang,<br />
+								Taipei 11529, Taiwan
+							</span>
+						</div>
+					</section>
+					<section>
+						<div class="contact-method">
+							<span class="icon solid alt fa-home"></span>
+							<h3>Address 2</h3>
+							<span>
+								100, Sec. 1, Guiren 13th Rd., Guiren Dist.,<br />
+								Tainan City 711, Taiwan
+							</span>
+						</div>
+					</section>
+				</section>
+
+			</div>
+		</section>
+
+		<!-- Footer -->
+		<!-- <footer id="footer">
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
@@ -172,16 +177,17 @@
 						</div>
 					</footer> -->
 
-			</div>
+	</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
