--- a/contents/about/about.html
+++ b/contents/about/about.html
@@ -24,11 +24,12 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="../../index.html">Home</a></li>
-							<li><a href="#">About</a></li>
+							<li><a href="../research/research.html">Research</a></li>
 							<li><a href="../publications/publications.html">Publications</a></li>
-							<li><a href="../awards/awards.html">Awards</a></li>
 							<li><a href="../members/members.html">Members</a></li>
-							<li><a href="../recruitment/recruitment.html">Recruitment</a></li>
+							<li><a href="../gallery/gallery.html">Gallery</a></li>
+							<li><a href="#">Software</a></li>
+							<li><a href="../recruitment/recruitment.html">Join us</a></li>
 						</ul>
 					</nav>
 
