--- a/contents/members/members.html
+++ b/contents/members/members.html
@@ -29,6 +29,7 @@
 							<li><a href="../publications/publications.html">Publications</a></li>
 							<li><a href="#">Members</a></li>
 							<li><a href="../gallery/gallery.html">Gallery</a></li>
+							<li><a href="../software/software.html">Software</a></li>
 							<li><a href="../recruitment/recruitment.html">Join us</a></li>
 						</ul>
 					</nav>
