--- a/contents/software/software.html
+++ b/contents/software/software.html
@@ -45,7 +45,8 @@
           <header class="major"><h1>Software</h1></header>
           <ul class="actions">
             <li>
-              <a href="https://github.com/mylab-root/NBT-staining/releases/download/software/NBT-Win64.exe">NBT-staining</a>
+              <!-- <a href="https://github.com/mylab-root/NBT-staining/releases/download/software/NBT-Win64.exe">NBT-staining</a> -->
+              <a href="https://github.com/P10911004-NPUST/nbt_staining/releases/download/software/NBT-Win64-2024Aug.exe">NBT-staining</a>
             </li>
           </ul>
         </div>
