--- a/contents/members/members.html
+++ b/contents/members/members.html
@@ -76,7 +76,16 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="#.html" class="link">Jhenny</a></h3>
+										<h3><a href="#.html" class="link">Geena</a></h3>
+										<p>Research Assistant</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic04.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="#.html" class="link">Fang-Yu</a></h3>
 										<p>Research Assistant</p>
 									</header>
 								</article>
@@ -100,7 +109,7 @@
 									</header>
 								</article>
 								<!-- Student -->
-								<article>
+								<!-- <article>
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
@@ -117,7 +126,7 @@
 										<h3><a href="#.html" class="link">Sean-Yuet</a></h3>
 										<p>Master Student</p>
 									</header>
-								</article>
+								</article> -->
 								
 							</section>
 
