update: NBT software

--- a/contents/members/members.html
+++ b/contents/members/members.html
@@ -85,7 +85,16 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="#.html" class="link">Fang-Yu</a></h3>
+										<h3><a href="#.html" class="link">Hsin-Yen</a></h3>
+										<p>Research Assistant</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic04.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="#.html" class="link">Louis</a></h3>
 										<p>Research Assistant</p>
 									</header>
 								</article>
@@ -105,6 +114,24 @@
 									</span>
 									<header class="major">
 										<h3><a href="#.html" class="link">Joon-Keat</a></h3>
+										<p>Post-doc</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="../members.png" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="#.html" class="link">Hari</a></h3>
+										<p>Post-doc</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="../members.png" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="#.html" class="link">Silambu</a></h3>
 										<p>Post-doc</p>
 									</header>
 								</article>
