--- a/contents/members/members.html
+++ b/contents/members/members.html
@@ -67,7 +67,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="#.html" class="link">Hsiao-Yu</a></h3>
+										<h3><a href="#.html" class="link">Shiau-Yu</a></h3>
 										<p>Research Assistant</p>
 									</header>
 								</article>
@@ -95,6 +95,15 @@
 									</span>
 									<header class="major">
 										<h3><a href="#.html" class="link">Louis</a></h3>
+										<p>Research Assistant</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic04.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="#.html" class="link">Cindy</a></h3>
 										<p>Research Assistant</p>
 									</header>
 								</article>
